--- a/style.css
+++ b/style.css
@@ -1,208 +1,289 @@
-body{
-    margin:0;
-    
+body {
+    margin: 0;
+
 }
 
-hr{
+hr {
+    width: 100%;
     height: 1px;
-   background-color: #ccc;
-  border: none;
-}
-nav{
-    background-color:  #3F72E9;
-    height: 56px;  
-   
-    
-}
-nav li{
-    list-style: none;
-    color:#FFFFFF;
-    
-}
-nav ul{
-    display: flex;
-    margin:0
-    
-}
-nav a{
-    text-decoration: none;
-    color:#FFFFFF
+    background-color: #ccc;
+    border: none;
 }
 
-.searchbar{
-margin-top: 5px;
-width: 600px;
-height: 40px;
+nav {
+    background-color: #3F72E9;
+    height: 3.25rem;
+    width: 100%;
+    /* position: sticky;
+    top: 0;
+    left: 0; */
+
+
 }
-.logo{
-    margin-top:15px;
+
+nav li {
+    list-style: none;
+    color: #FFFFFF;
+
+}
+
+nav ul {
+    display: flex;
+    margin: 0
+}
+
+nav a {
+    text-decoration: none;
+    color: #FFFFFF
+}
+
+.searchbar {
+    margin-top: 5px;
+    width: 30rem;
+    height: 40px;
+}
+
+.logo {
+    margin-top: 15px;
     margin-right: 10px;
     padding-left: 250px;
 }
-.become-seller{
-   
-    margin-top:15px;
-    margin-right: 10px;
+
+.become-seller {
+
+    margin: 15px 10px 0 0;
     padding-left: 5px;
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1rem;
 
 }
 
-.cart{
+.cart {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    margin-top:15px;
-    margin-right: 10px;
+    margin: 15px 10px 0 0;
     padding-left: 10px;
 }
 
-.product{
+.product {
     display: flex;
     padding: 30px;
-   
-}
-.phone-image{
-    width: 204px;
-height: 220px;
+
 }
 
-.product-name{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 20px;
-line-height: 23px;
-margin-bottom: 0;
+.phone-image {
+    width: 12.5rem;
+    height: 12rem;
 }
-.product-Details{
+
+.product-name {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 0;
+}
+
+.product-Details {
     margin-left: 30px;
 }
-.product-name a{
+
+.product-name a {
     text-decoration: none;
     color: #000000;
-   
+
 
 }
 
-.ratings{
+.ratings {
     display: flex;
-   
+
 }
 
-.rating-pill{
+.rating-pill {
     width: 30px;
     height: 15px;
     margin-top: 18px;
     margin-right: 5px;
 }
-.specifications{
+
+.specifications {
     margin: 0;
     padding: 0;
     margin-left: 15px;
 }
 
-.specifications li{
+.specifications li {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
 }
 
-.product-pricing{
+.product-pricing {
     margin-left: 420px;
 }
-.product-pricing li{
+
+.product-pricing li {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 18px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
 }
 
-.product-pricing ul{
+.product-pricing ul {
     padding-left: 30px;
     list-style: none;
     margin: 0;
     line-height: 14px;
 }
 
-.price{
+.price {
     font-family: 'Roboto';
     margin-left: 30px;
     margin-bottom: 0;
     margin-top: 25px;
-   
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 28px;
+
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
 }
 
-.offers{
+.offers {
     color: #508C47;
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 12px;
-line-height: 14px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
 
 }
 
-.bank-offers{
+.bank-offers {
     color: #508C47;
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 600;
-font-size: 12px;
-line-height: 14px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 14px;
 }
 
-footer{
- display: flex;
-height: 284px;
-left: 0px;
-top: 1396px;
-justify-content: space-around;
-background: #1A2335;
+footer {
+    display: flex;
+    height: 284px;
+    left: 0px;
+    top: 1396px;
+    justify-content: space-around;
+    background: #1A2335;
 }
 
-footer h4{
+footer h4 {
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 14px;
-/* identical to box height */
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    /* identical to box height */
 
 
-color: #878787;
+    color: #878787;
 }
-footer p{
+
+footer p {
     width: 250px;
     text-align: left;
 }
 
-footer ul{
- list-style: none;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 25px;
-color: #FFFFFF;
+footer ul {
+    list-style: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 25px;
+    color: #FFFFFF;
 }
-.vl{
 
-border-left: 2px solid #878787; ;
-  height: 100px;
-  margin-top: 54px;
+.vl {
+
+    border-left: 2px solid #878787;
+    ;
+    height: 100px;
+    margin-top: 54px;
 }
-.telephone{
-    color:#3D72E8
+
+.telephone {
+    color: #3D72E8
+}
+
+.button {
+    width: 50px;
+    /* equivalent to 50 pixels assuming a root font size of 16 pixels */
+    height: 20px;
+    /* equivalent to 20 pixels assuming a root font size of 16 pixels */
+    font-size: 1rem;
+    background-color: blue;
+    color: white;
+    border: none;
+}
+
+
+.que1 {
+    display: flex;
+    list-style: none;
+    background-color: rgb(255, 255, 255);
+    justify-content: space-between;
+}
+
+.togglediv {
+    background-color: rgba(173, 173, 172, 0.049);
+    ;
+
+}
+
+.qna ul {
+    padding: 0 1rem;
+
+}
+
+
+.qna li {
+    padding: 0 2rem;
+    font-family: 'Roboto';
+    border-style: solid;
+    border-width: 1px;
+    border-color: #dedbdb;
+    letter-spacing: 1px;
+    color: #5e5f61;
+
+
+
+}
+
+.cross_img {
+    margin-top: 1.2rem;
+    width: 1rem;
+
+}
+
+.cross_img_rotate {
+    transform: rotate(180deg);
+}
+
+.hidden {
+    display: none;
+}
+
+.innerHTML {
+    font-size: 20px;
+    padding: 1rem 2rem;
+    font-family: "Roboto";
 }
